client-app/core/utilities/search/search-phrase/generated/SearchPhraseParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import SearchPhraseListener from './SearchPhraseListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class SearchPhraseParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'!'", "':'", "','" ];
    static symbolicNames = [ null, null, "FD", "VD", "RD", "RangeStart", 
                             "RangeEnd", "String", "WS" ];
    static ruleNames = [ "searchPhrase", "phrase", "keyword", "filters", 
                         "attributeFilter", "rangeFilter", "fieldName", 
                         "attributeFilterValue", "rangeFilterValue", "range", 
                         "rangeStart", "rangeEnd", "lower", "upper", "string", 
                         "negation" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = SearchPhraseParser.ruleNames;
        this.literalNames = SearchPhraseParser.literalNames;
        this.symbolicNames = SearchPhraseParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	searchPhrase() {
	    let localctx = new SearchPhraseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, SearchPhraseParser.RULE_searchPhrase);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 35;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===8) {
	            this.state = 32;
	            this.match(SearchPhraseParser.WS);
	            this.state = 37;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 38;
	        this.phrase();
	        this.state = 43;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 39;
	                this.match(SearchPhraseParser.WS);
	                this.state = 40;
	                this.phrase(); 
	            }
	            this.state = 45;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	        }

	        this.state = 49;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===8) {
	            this.state = 46;
	            this.match(SearchPhraseParser.WS);
	            this.state = 51;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	phrase() {
	    let localctx = new PhraseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, SearchPhraseParser.RULE_phrase);
	    try {
	        this.state = 54;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 52;
	            this.keyword();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 53;
	            this.filters();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	keyword() {
	    let localctx = new KeywordContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, SearchPhraseParser.RULE_keyword);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        this.match(SearchPhraseParser.String);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	filters() {
	    let localctx = new FiltersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, SearchPhraseParser.RULE_filters);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 58;
	            this.negation();
	        }

	        this.state = 63;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 61;
	            this.attributeFilter();
	            break;

	        case 2:
	            this.state = 62;
	            this.rangeFilter();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attributeFilter() {
	    let localctx = new AttributeFilterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, SearchPhraseParser.RULE_attributeFilter);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this.fieldName();
	        this.state = 66;
	        this.match(SearchPhraseParser.FD);
	        this.state = 67;
	        this.attributeFilterValue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rangeFilter() {
	    let localctx = new RangeFilterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, SearchPhraseParser.RULE_rangeFilter);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.fieldName();
	        this.state = 70;
	        this.match(SearchPhraseParser.FD);
	        this.state = 71;
	        this.rangeFilterValue();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldName() {
	    let localctx = new FieldNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, SearchPhraseParser.RULE_fieldName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this.match(SearchPhraseParser.String);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attributeFilterValue() {
	    let localctx = new AttributeFilterValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, SearchPhraseParser.RULE_attributeFilterValue);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this.string();
	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 76;
	            this.match(SearchPhraseParser.VD);
	            this.state = 77;
	            this.string();
	            this.state = 82;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rangeFilterValue() {
	    let localctx = new RangeFilterValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, SearchPhraseParser.RULE_rangeFilterValue);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this.range();
	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 84;
	            this.match(SearchPhraseParser.VD);
	            this.state = 85;
	            this.range();
	            this.state = 90;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	range() {
	    let localctx = new RangeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, SearchPhraseParser.RULE_range);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91;
	        this.rangeStart();
	        this.state = 95;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 92;
	                this.match(SearchPhraseParser.WS); 
	            }
	            this.state = 97;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	        }

	        this.state = 99;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===7) {
	            this.state = 98;
	            this.lower();
	        }

	        this.state = 104;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===8) {
	            this.state = 101;
	            this.match(SearchPhraseParser.WS);
	            this.state = 106;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 107;
	        this.match(SearchPhraseParser.RD);
	        this.state = 111;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,11,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 108;
	                this.match(SearchPhraseParser.WS); 
	            }
	            this.state = 113;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,11,this._ctx);
	        }

	        this.state = 115;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===7) {
	            this.state = 114;
	            this.upper();
	        }

	        this.state = 120;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===8) {
	            this.state = 117;
	            this.match(SearchPhraseParser.WS);
	            this.state = 122;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 123;
	        this.rangeEnd();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rangeStart() {
	    let localctx = new RangeStartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, SearchPhraseParser.RULE_rangeStart);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 125;
	        this.match(SearchPhraseParser.RangeStart);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rangeEnd() {
	    let localctx = new RangeEndContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, SearchPhraseParser.RULE_rangeEnd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.match(SearchPhraseParser.RangeEnd);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lower() {
	    let localctx = new LowerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, SearchPhraseParser.RULE_lower);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this.match(SearchPhraseParser.String);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	upper() {
	    let localctx = new UpperContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, SearchPhraseParser.RULE_upper);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(SearchPhraseParser.String);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string() {
	    let localctx = new StringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, SearchPhraseParser.RULE_string);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.match(SearchPhraseParser.String);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	negation() {
	    let localctx = new NegationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, SearchPhraseParser.RULE_negation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(SearchPhraseParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

SearchPhraseParser.EOF = antlr4.Token.EOF;
SearchPhraseParser.T__0 = 1;
SearchPhraseParser.FD = 2;
SearchPhraseParser.VD = 3;
SearchPhraseParser.RD = 4;
SearchPhraseParser.RangeStart = 5;
SearchPhraseParser.RangeEnd = 6;
SearchPhraseParser.String = 7;
SearchPhraseParser.WS = 8;

SearchPhraseParser.RULE_searchPhrase = 0;
SearchPhraseParser.RULE_phrase = 1;
SearchPhraseParser.RULE_keyword = 2;
SearchPhraseParser.RULE_filters = 3;
SearchPhraseParser.RULE_attributeFilter = 4;
SearchPhraseParser.RULE_rangeFilter = 5;
SearchPhraseParser.RULE_fieldName = 6;
SearchPhraseParser.RULE_attributeFilterValue = 7;
SearchPhraseParser.RULE_rangeFilterValue = 8;
SearchPhraseParser.RULE_range = 9;
SearchPhraseParser.RULE_rangeStart = 10;
SearchPhraseParser.RULE_rangeEnd = 11;
SearchPhraseParser.RULE_lower = 12;
SearchPhraseParser.RULE_upper = 13;
SearchPhraseParser.RULE_string = 14;
SearchPhraseParser.RULE_negation = 15;

class SearchPhraseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_searchPhrase;
    }

	phrase = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PhraseContext);
	    } else {
	        return this.getTypedRuleContext(PhraseContext,i);
	    }
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(SearchPhraseParser.WS);
	    } else {
	        return this.getToken(SearchPhraseParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterSearchPhrase(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitSearchPhrase(this);
		}
	}


}



class PhraseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_phrase;
    }

	keyword() {
	    return this.getTypedRuleContext(KeywordContext,0);
	};

	filters() {
	    return this.getTypedRuleContext(FiltersContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterPhrase(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitPhrase(this);
		}
	}


}



class KeywordContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_keyword;
    }

	String() {
	    return this.getToken(SearchPhraseParser.String, 0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterKeyword(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitKeyword(this);
		}
	}


}



class FiltersContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_filters;
    }

	attributeFilter() {
	    return this.getTypedRuleContext(AttributeFilterContext,0);
	};

	rangeFilter() {
	    return this.getTypedRuleContext(RangeFilterContext,0);
	};

	negation() {
	    return this.getTypedRuleContext(NegationContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterFilters(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitFilters(this);
		}
	}


}



class AttributeFilterContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_attributeFilter;
    }

	fieldName() {
	    return this.getTypedRuleContext(FieldNameContext,0);
	};

	FD() {
	    return this.getToken(SearchPhraseParser.FD, 0);
	};

	attributeFilterValue() {
	    return this.getTypedRuleContext(AttributeFilterValueContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterAttributeFilter(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitAttributeFilter(this);
		}
	}


}



class RangeFilterContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_rangeFilter;
    }

	fieldName() {
	    return this.getTypedRuleContext(FieldNameContext,0);
	};

	FD() {
	    return this.getToken(SearchPhraseParser.FD, 0);
	};

	rangeFilterValue() {
	    return this.getTypedRuleContext(RangeFilterValueContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterRangeFilter(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitRangeFilter(this);
		}
	}


}



class FieldNameContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_fieldName;
    }

	String() {
	    return this.getToken(SearchPhraseParser.String, 0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterFieldName(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitFieldName(this);
		}
	}


}



class AttributeFilterValueContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_attributeFilterValue;
    }

	string = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(StringContext);
	    } else {
	        return this.getTypedRuleContext(StringContext,i);
	    }
	};

	VD = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(SearchPhraseParser.VD);
	    } else {
	        return this.getToken(SearchPhraseParser.VD, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterAttributeFilterValue(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitAttributeFilterValue(this);
		}
	}


}



class RangeFilterValueContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_rangeFilterValue;
    }

	range = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(RangeContext);
	    } else {
	        return this.getTypedRuleContext(RangeContext,i);
	    }
	};

	VD = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(SearchPhraseParser.VD);
	    } else {
	        return this.getToken(SearchPhraseParser.VD, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterRangeFilterValue(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitRangeFilterValue(this);
		}
	}


}



class RangeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_range;
    }

	rangeStart() {
	    return this.getTypedRuleContext(RangeStartContext,0);
	};

	RD() {
	    return this.getToken(SearchPhraseParser.RD, 0);
	};

	rangeEnd() {
	    return this.getTypedRuleContext(RangeEndContext,0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(SearchPhraseParser.WS);
	    } else {
	        return this.getToken(SearchPhraseParser.WS, i);
	    }
	};


	lower() {
	    return this.getTypedRuleContext(LowerContext,0);
	};

	upper() {
	    return this.getTypedRuleContext(UpperContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterRange(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitRange(this);
		}
	}


}



class RangeStartContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_rangeStart;
    }

	RangeStart() {
	    return this.getToken(SearchPhraseParser.RangeStart, 0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterRangeStart(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitRangeStart(this);
		}
	}


}



class RangeEndContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_rangeEnd;
    }

	RangeEnd() {
	    return this.getToken(SearchPhraseParser.RangeEnd, 0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterRangeEnd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitRangeEnd(this);
		}
	}


}



class LowerContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_lower;
    }

	String() {
	    return this.getToken(SearchPhraseParser.String, 0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterLower(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitLower(this);
		}
	}


}



class UpperContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_upper;
    }

	String() {
	    return this.getToken(SearchPhraseParser.String, 0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterUpper(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitUpper(this);
		}
	}


}



class StringContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_string;
    }

	String() {
	    return this.getToken(SearchPhraseParser.String, 0);
	};

	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterString(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitString(this);
		}
	}


}



class NegationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = SearchPhraseParser.RULE_negation;
    }


	enterRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.enterNegation(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof SearchPhraseListener ) {
	        listener.exitNegation(this);
		}
	}


}




SearchPhraseParser.SearchPhraseContext = SearchPhraseContext; 
SearchPhraseParser.PhraseContext = PhraseContext; 
SearchPhraseParser.KeywordContext = KeywordContext; 
SearchPhraseParser.FiltersContext = FiltersContext; 
SearchPhraseParser.AttributeFilterContext = AttributeFilterContext; 
SearchPhraseParser.RangeFilterContext = RangeFilterContext; 
SearchPhraseParser.FieldNameContext = FieldNameContext; 
SearchPhraseParser.AttributeFilterValueContext = AttributeFilterValueContext; 
SearchPhraseParser.RangeFilterValueContext = RangeFilterValueContext; 
SearchPhraseParser.RangeContext = RangeContext; 
SearchPhraseParser.RangeStartContext = RangeStartContext; 
SearchPhraseParser.RangeEndContext = RangeEndContext; 
SearchPhraseParser.LowerContext = LowerContext; 
SearchPhraseParser.UpperContext = UpperContext; 
SearchPhraseParser.StringContext = StringContext; 
SearchPhraseParser.NegationContext = NegationContext; 
